[gd_scene load_steps=16 format=3 uid="uid://dsojm5iusx8c"]

[ext_resource type="Script" uid="uid://c5d2b2eii5ydr" path="res://objects/logicgate/xnorgate/xnor_gate.gd" id="1_dkyev"]
[ext_resource type="Texture2D" uid="uid://bksmf3e7bmxli" path="res://Assets/Objectives/LogicGates.png" id="2_8eabm"]
[ext_resource type="PackedScene" uid="uid://2fgvrejwqyfe" path="res://objects/signal_receiver_node.tscn" id="3_668c3"]
[ext_resource type="PackedScene" uid="uid://ceqe2mjgjcxqd" path="res://objects/signal_transmitter_node.tscn" id="4_qh7tb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwhi8"]
size = Vector2(48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2igf"]
atlas = ExtResource("2_8eabm")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf4u7"]
atlas = ExtResource("2_8eabm")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuidi"]
atlas = ExtResource("2_8eabm")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlua1"]
atlas = ExtResource("2_8eabm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_fk55o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2igf")
}],
"loop": true,
"name": &"full",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf4u7")
}],
"loop": true,
"name": &"inputa",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuidi")
}],
"loop": true,
"name": &"inputb",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlua1")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oy8cq"]
atlas = ExtResource("2_8eabm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36tgd"]
atlas = ExtResource("2_8eabm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2vqn"]
atlas = ExtResource("2_8eabm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efaws"]
atlas = ExtResource("2_8eabm")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_omyv3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy8cq")
}],
"loop": true,
"name": &"full",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36tgd")
}],
"loop": true,
"name": &"inputa",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2vqn")
}],
"loop": true,
"name": &"inputb",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efaws")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}]

[node name="XnorGate" type="StaticBody2D"]
script = ExtResource("1_dkyev")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vwhi8")

[node name="NormalState" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fk55o")
animation = &"inputb"

[node name="NotState" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_omyv3")
animation = &"none"

[node name="SignalReceiverNode1" parent="." instance=ExtResource("3_668c3")]

[node name="SignalReceiverNode2" parent="." instance=ExtResource("3_668c3")]

[node name="SignalTransmitterNode" parent="." instance=ExtResource("4_qh7tb")]
